--- a/1 - structboost/index.html
+++ b/1 - structboost/index.html
@@ -104,10 +104,185 @@
                 </li>
             </ul>
         </div>
-        
+
 
 
     </section>
+
+    <!--SECTION ART-->
+    <section class="section-art">
+
+        <!--CONTAINER MAX-WIDTH 124.6REM-->
+        <div class="container">
+
+            <!--TITLE-->
+            <div class="title-text">
+                <div class="left">
+                    <h3>Domine a Arte da Front-end</h3>
+                    <p>Prepare-se para criar interfaces incríveis e funcionais para a web com este curso completo de
+                        front-end.</p>
+                </div>
+
+                <p>Junte-se a nós neste curso de front-end e embarque em uma jornada emocionante para se tornar um
+                    desenvolvedor web altamente qualificado.</p>
+            </div>
+
+            <!--ALL CARDS-->
+            <div class="all-cards">
+
+                <!--CARD POST-->
+                <div class="card-post">
+                    <span class="tag">Fundamentos</span>
+                    <div class="image">
+                        <img src="./img/image-post.svg" alt="">
+                    </div>
+                    <div class="text">
+                        <h6>HTML5 e Semântica</h6>
+                        <p>Aprenda a usar a mais recente versão do HTML e crie páginas web bem estruturadas e otimizadas
+                            para os mecanismos de busca</p>
+                    </div>
+                </div>
+
+                <!--CARD POST-->
+                <div class="card-post">
+                    <span class="tag">Estilizando</span>
+                    <div class="image">
+                        <img src="./img/image-post.svg" alt="">
+                    </div>
+                    <div class="text">
+                        <h6>CSS3 e Estilização Avançada</h6>
+                        <p>Explore os recursos avançados do CSS3 para criar layouts responsivos, animações incríveis e
+                            designs atrativos.</p>
+                    </div>
+                </div>
+
+                <!--CARD POST-->
+                <div class="card-post">
+                    <span class="tag">Potencializando</span>
+                    <div class="image">
+                        <img src="./img/image-post.svg" alt="">
+                    </div>
+                    <div class="text">
+                        <h6>Javascript Moderno</h6>
+                        <p>Aprenda a programar com Javascript moderno e torne suas páginas interativas e dinâmicas,
+                            proporcionando uma experiência única .</p>
+                    </div>
+                </div>
+
+                <!--CARD POST-->
+                <div class="card-post">
+                    <span class="tag">Aplicações</span>
+                    <div class="image">
+                        <img src="./img/image-post.svg" alt="">
+                    </div>
+                    <div class="text">
+                        <h6>Frameworks Front-end</h6>
+                        <p>Descubra como utilizar frameworks populares como React, Angular e Vue.js para criar
+                            aplicações
+                            web completas e eficientes.</p>
+                    </div>
+                </div>
+
+                <!--CARD POST-->
+                <div class="card-post">
+                    <span class="tag">Design</span>
+                    <div class="image">
+                        <img src="./img/image-post.svg" alt="">
+                    </div>
+                    <div class="text">
+                        <h6>Design Responsivo </h6>
+                        <p>Aprenda a criar designs responsivos e mobile-first que se adaptam perfeitamente a diferentes
+                            tamanhos de tela.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <!--SECTION NEWSLETTER-->
+    <section class="section-newsletter">
+
+        <!--CONTAINER MAX-WIDTH 124.6REM-->
+        <div class="container">
+            <h2>Front-end descomplicado e direto ao ponto!</h2>
+            <p>Aprenda a desenvolver interfaces modernas e de alta qualidade com quem está na área atuando com projetos
+                altamente renomados.</p>
+            <button class="btn-primary lg white">Fazer parte da lista de espera</button>
+        </div>
+    </section>
+
+    <!--FOOTER-->
+    <footer>
+
+        <!--CONTAINER MAX-WIDTH 124.6REM-->
+        <div class="container">
+
+            <!--MAIN AREA-->
+            <div class="main-area">
+
+                <!--LEFT-->
+                <div class="left">
+                    <img src="img/logo.svg" alt="Logo StructBoost">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's </p>
+                </div>
+
+                <!--RIGHT-->
+                <div class="right">
+
+                    <div class="item-nav">
+                        <h6>Lista de páginas</h6>
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Diferenciais</a></li>
+                            <li><a href="#">Galeria</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="item-nav">
+                        <h6>Soluções</h6>
+                        <ul>
+                            <li><a href="#">Texto link 01</a></li>
+                            <li><a href="#">Texto link 02</a></li>
+                            <li><a href="#">Texto link 03</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="item-nav">
+                        <h6>Contato</h6>
+                        <ul>
+                            <li><a href="#">Texto link 01</a></li>
+                            <li><a href="#">Texto link 02</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="item-nav">
+                        <h6>Soluções</h6>
+                        <ul>
+                            <li><a href="#">
+                                    <img src="img/instagram.svg" alt="Logo Instagram">
+                                    Instagram
+                                </a>
+                            </li>
+                            <li><a href="#">
+                                    <img src="img/linkedin.svg" alt="Logo Linkedin">
+                                    Linkedin
+                                </a>
+                            </li>
+                            <li><a href="#">
+                                    <img src="img/youtube.svg" alt="Logo Youtube">
+                                    Youtube
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <p class="copy">2023 © Todos os direitos reservados. <strong>Codeboost</strong></p>
+        </div>
+    </footer>
 
     <!--JS-->
     <script src="./js/script.js"></script>
