structboost responsivo finalizado

--- a/1 - structboost/index.html
+++ b/1 - structboost/index.html
@@ -13,6 +13,7 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/variables.css">
@@ -32,6 +33,11 @@
             <a class="logo" href="./">
                 <img src="img/logo.svg" alt="Logo Struct Boost" title="Logo Struct Boost">
             </a>
+
+            <!--BUTTON MOBILE-->
+            <button class="btn-mobile">
+                <img src="img/icon-hamburger.svg" alt="Ícone de navegação">
+            </button>
 
             <!--NAV-->
             <nav>
@@ -64,8 +70,11 @@
                 <img class="arrow" src="./img/arrow-direction-button.svg" alt="">
             </div>
 
-            <!--ILUSTRA HERO-->
+            <!--ILUSTRA HERO DESKTOP-->
             <img class="ilustra" src="./img/ilustra-hero.svg" alt="Ilustra Hero">
+
+            <!--ILUSTRA HERO MOBILE-->
+            <img class="ilustra-mobile" src="./img/ilustra-mobile.svg" alt="">
         </div>
     </section>
 
@@ -90,7 +99,7 @@
                     <div class="item-digital">
                         <img class="icon" src="img/icon-nav.svg" alt="">
                         <h6>Navegabilidade sem Limites</h6>
-                        <p>Construa a base sólida para uma<br> experiência de usuário fluida e intuitiva, garantindo a
+                        <p>Construa a base sólida para uma<br>experiência de usuário fluida e intuitiva, garantindo a
                             satisfação do público.</p>
                     </div>
                 </li>
@@ -110,7 +119,7 @@
     </section>
 
     <!--SECTION ART-->
-    <section class="section-art">
+    <section class=" section-art">
 
         <!--CONTAINER MAX-WIDTH 124.6REM-->
         <div class="container">
@@ -201,7 +210,7 @@
     </section>
 
     <!--SECTION NEWSLETTER-->
-    <section class="section-newsletter">
+    <section class=" section-newsletter">
 
         <!--CONTAINER MAX-WIDTH 124.6REM-->
         <div class="container">
@@ -216,7 +225,7 @@
     <footer>
 
         <!--CONTAINER MAX-WIDTH 124.6REM-->
-        <div class="container">
+        <div class=" container">
 
             <!--MAIN AREA-->
             <div class="main-area">
@@ -258,7 +267,7 @@
                     </div>
 
                     <div class="item-nav">
-                        <h6>Soluções</h6>
+                        <h6>Nossas redes sociais</h6>
                         <ul>
                             <li><a href="#">
                                     <img src="img/instagram.svg" alt="Logo Instagram">
